fixed issue with tiles overlap

--- a/SCSS/_works.scss
+++ b/SCSS/_works.scss
@@ -492,6 +492,7 @@ background-size: 100% 100%;
     // z-index: -2;
 
     height: 100%;
+    min-height: fit-content;
     width: 100%;
 
     margin-top: -65px;
