--- a/SCSS/main.css
+++ b/SCSS/main.css
@@ -464,6 +464,8 @@
   overscroll-behavior-y: none;
   scroll-behavior: smooth;
   height: 100%;
+  min-height: -moz-fit-content;
+  min-height: fit-content;
   width: 100%;
   margin-top: -65px;
   padding-top: 65px;
